--- a/src/css/Userlist.css
+++ b/src/css/Userlist.css
@@ -2,8 +2,8 @@
   position: absolute;
   top: 0px;
   bottom: 0px;
-  background-color: #331a12;
   z-index: 100;
+  background-color: #331a12;
   transition: background-color 2s width 2s left 2s;
 }
 
@@ -13,6 +13,7 @@
 
 .userlist.open {
   width: 200px;
+  background-color: #1e3394;
 }
 
 .userlist .close-button {
