--- a/src/Chat.css
+++ b/src/Chat.css
@@ -20,6 +20,7 @@
 }
 
 .inputbox .text {
+  margin:5px;
   border-radius: 25px;
   border: none;
   outline: none;
@@ -27,6 +28,7 @@
   font-size: 1em;
   padding-left: 8px;
   padding-right: 8px;
+  max-height: 60px;
   flex: 1;
 }
 
