--- a/src/Profile.css
+++ b/src/Profile.css
@@ -30,6 +30,7 @@
 
 .text{
   font-family: 'IBM Plex Sans Thai', sans-serif;
+  padding: 5px 5px;
   outline: none;
   margin: 10px;
   border: none;
