--- a/src/css/Avatar.css
+++ b/src/css/Avatar.css
@@ -1,5 +1,8 @@
 .avatar {
-  margin: 15px;
+  margin-top: 5px;
+  margin-right: 15px;
+  margin-left: 15px;
+  margin-bottom: 7px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
